Team-5_Assignment-5/.antlr/ExprParser.java
// Generated from \\wsl.localhost\Ubuntu\home\minhh\SJSU\CMPE-152\Team-5_Assignment-5\Expr.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PLUSOP=1, MINUSOP=2, MULTOP=3, DIVOP=4, EQUAL=5, LT=6, GT=7, CARAT=8, 
		COLON=9, COMMA=10, PERIOD=11, SEMICOLON=12, LPAREN=13, RPAREN=14, LBRACKET=15, 
		RBRACKET=16, LCOMMENT=17, RCOMMENT=18, LBRACE=19, RBRACE=20, ASSIGN=21, 
		PLUSEQUAL=22, MINUSEQUAL=23, DIVEQUAL=24, MULTEQUAL=25, NE=26, LTEQ=27, 
		GTEQ=28, DOTDOT=29, PROGRAM=30, CONST=31, TYPE=32, ARRAY=33, ASM=34, BREAK=35, 
		CONSTRUCTOR=36, CONTINUE=37, DESTRUCTOR=38, FALSE=39, FILE=40, GOTO=41, 
		IMPLEMENTATION=42, IN=43, INLINE=44, INTERFACE=45, LABEL=46, NIL=47, OBJECT=48, 
		ON=49, OPERATOR=50, PACKED=51, SET=52, SHL=53, SHR=54, UNIT=55, USES=56, 
		XOR=57, OF=58, RECORD=59, VAR=60, BEGIN=61, END=62, DIV=63, MOD=64, AND=65, 
		OR=66, NOT=67, IF=68, THEN=69, ELSE=70, CASE=71, REPEAT=72, UNTIL=73, 
		WHILE=74, DO=75, FOR=76, TO=77, DOWNTO=78, WRITE=79, WRITELN=80, READ=81, 
		READLN=82, PROCEDURE=83, FUNCTION=84, IDENTIFIER=85, INTEGER=86, REAL=87, 
		NEWLINE=88, WS=89, QUOTE=90, CHARACTER=91, STRING=92, COMMENT=93;
	public static final int
		RULE_program = 0, RULE_program_header = 1, RULE_program_name = 2, RULE_program_body = 3, 
		RULE_program_declaration = 4, RULE_constants_section = 5, RULE_const_list = 6, 
		RULE_const_name = 7, RULE_constant = 8, RULE_variable_section = 9, RULE_var_declaration = 10, 
		RULE_var_list = 11, RULE_var_name = 12, RULE_routine_section = 13, RULE_routine_declaration = 14, 
		RULE_procedure = 15, RULE_function = 16, RULE_routine_name = 17, RULE_parameter_list = 18, 
		RULE_parameter_declaration = 19, RULE_parameter_name_list = 20, RULE_parameter_name = 21, 
		RULE_call_procedure = 22, RULE_procedure_name = 23, RULE_call_function = 24, 
		RULE_function_name = 25, RULE_argument_list = 26, RULE_argument = 27, 
		RULE_data_type = 28, RULE_type_name = 29, RULE_array_type = 30, RULE_array_declaration = 31, 
		RULE_compound_statement = 32, RULE_statement_list = 33, RULE_statement = 34, 
		RULE_empty_statement = 35, RULE_assign_statement = 36, RULE_lhs = 37, 
		RULE_rhs = 38, RULE_variable = 39, RULE_expression = 40, RULE_single_expression = 41, 
		RULE_term_expression = 42, RULE_factor = 43, RULE_for_statement = 44, 
		RULE_while_statement = 45, RULE_repeat_statement = 46, RULE_if_statement = 47, 
		RULE_true_statement = 48, RULE_false_statment = 49, RULE_case_statment = 50, 
		RULE_case_branch_list = 51, RULE_case_branch = 52, RULE_case_constant_list = 53, 
		RULE_case_constant = 54, RULE_write_statement = 55, RULE_writeln_statement = 56, 
		RULE_write_argument_list = 57, RULE_write_argument = 58, RULE_width = 59, 
		RULE_decimal_place = 60, RULE_sign = 61, RULE_relation_operator = 62, 
		RULE_expression_operator = 63, RULE_term_operator = 64, RULE_number = 65, 
		RULE_unsign_number = 66, RULE_char_constant = 67, RULE_string_constant = 68;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "program_header", "program_name", "program_body", "program_declaration", 
			"constants_section", "const_list", "const_name", "constant", "variable_section", 
			"var_declaration", "var_list", "var_name", "routine_section", "routine_declaration", 
			"procedure", "function", "routine_name", "parameter_list", "parameter_declaration", 
			"parameter_name_list", "parameter_name", "call_procedure", "procedure_name", 
			"call_function", "function_name", "argument_list", "argument", "data_type", 
			"type_name", "array_type", "array_declaration", "compound_statement", 
			"statement_list", "statement", "empty_statement", "assign_statement", 
			"lhs", "rhs", "variable", "expression", "single_expression", "term_expression", 
			"factor", "for_statement", "while_statement", "repeat_statement", "if_statement", 
			"true_statement", "false_statment", "case_statment", "case_branch_list", 
			"case_branch", "case_constant_list", "case_constant", "write_statement", 
			"writeln_statement", "write_argument_list", "write_argument", "width", 
			"decimal_place", "sign", "relation_operator", "expression_operator", 
			"term_operator", "number", "unsign_number", "char_constant", "string_constant"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'+'", "'-'", "'*'", "'/'", "'='", "'<'", "'>'", "'^'", "':'", 
			"','", "'.'", "';'", "'('", "')'", "'['", "']'", "'(*'", "'*)'", "'{'", 
			"'}'", "':='", "'+='", "'-='", "'/='", "'*='", "'<>'", "'<='", "'>='", 
			"'..'", null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'''"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PLUSOP", "MINUSOP", "MULTOP", "DIVOP", "EQUAL", "LT", "GT", "CARAT", 
			"COLON", "COMMA", "PERIOD", "SEMICOLON", "LPAREN", "RPAREN", "LBRACKET", 
			"RBRACKET", "LCOMMENT", "RCOMMENT", "LBRACE", "RBRACE", "ASSIGN", "PLUSEQUAL", 
			"MINUSEQUAL", "DIVEQUAL", "MULTEQUAL", "NE", "LTEQ", "GTEQ", "DOTDOT", 
			"PROGRAM", "CONST", "TYPE", "ARRAY", "ASM", "BREAK", "CONSTRUCTOR", "CONTINUE", 
			"DESTRUCTOR", "FALSE", "FILE", "GOTO", "IMPLEMENTATION", "IN", "INLINE", 
			"INTERFACE", "LABEL", "NIL", "OBJECT", "ON", "OPERATOR", "PACKED", "SET", 
			"SHL", "SHR", "UNIT", "USES", "XOR", "OF", "RECORD", "VAR", "BEGIN", 
			"END", "DIV", "MOD", "AND", "OR", "NOT", "IF", "THEN", "ELSE", "CASE", 
			"REPEAT", "UNTIL", "WHILE", "DO", "FOR", "TO", "DOWNTO", "WRITE", "WRITELN", 
			"READ", "READLN", "PROCEDURE", "FUNCTION", "IDENTIFIER", "INTEGER", "REAL", 
			"NEWLINE", "WS", "QUOTE", "CHARACTER", "STRING", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program_headerContext program_header() {
			return getRuleContext(Program_headerContext.class,0);
		}
		public Program_bodyContext program_body() {
			return getRuleContext(Program_bodyContext.class,0);
		}
		public TerminalNode PERIOD() { return getToken(ExprParser.PERIOD, 0); }
		public TerminalNode EOF() { return getToken(ExprParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			program_header();
			setState(139);
			program_body();
			setState(140);
			match(PERIOD);
			setState(141);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_headerContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(ExprParser.PROGRAM, 0); }
		public Program_nameContext program_name() {
			return getRuleContext(Program_nameContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(ExprParser.SEMICOLON, 0); }
		public Program_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_header; }
	}

	public final Program_headerContext program_header() throws RecognitionException {
		Program_headerContext _localctx = new Program_headerContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(PROGRAM);
			setState(144);
			program_name();
			setState(145);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_nameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ExprParser.IDENTIFIER, 0); }
		public Program_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_name; }
	}

	public final Program_nameContext program_name() throws RecognitionException {
		Program_nameContext _localctx = new Program_nameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_program_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_bodyContext extends ParserRuleContext {
		public Program_declarationContext program_declaration() {
			return getRuleContext(Program_declarationContext.class,0);
		}
		public Compound_statementContext compound_statement() {
			return getRuleContext(Compound_statementContext.class,0);
		}
		public Program_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_body; }
	}

	public final Program_bodyContext program_body() throws RecognitionException {
		Program_bodyContext _localctx = new Program_bodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_program_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			program_declaration();
			setState(150);
			compound_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_declarationContext extends ParserRuleContext {
		public Constants_sectionContext constants_section() {
			return getRuleContext(Constants_sectionContext.class,0);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(ExprParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(ExprParser.SEMICOLON, i);
		}
		public Routine_sectionContext routine_section() {
			return getRuleContext(Routine_sectionContext.class,0);
		}
		public Variable_sectionContext variable_section() {
			return getRuleContext(Variable_sectionContext.class,0);
		}
		public Program_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_declaration; }
	}

	public final Program_declarationContext program_declaration() throws RecognitionException {
		Program_declarationContext _localctx = new Program_declarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_program_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONST) {
				{
				setState(152);
				constants_section();
				setState(153);
				match(SEMICOLON);
				}
			}

			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PROCEDURE || _la==FUNCTION) {
				{
				setState(157);
				routine_section();
				setState(158);
				match(SEMICOLON);
				}
			}

			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(162);
				variable_section();
				setState(163);
				match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constants_sectionContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(ExprParser.CONST, 0); }
		public Const_listContext const_list() {
			return getRuleContext(Const_listContext.class,0);
		}
		public Constants_sectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constants_section; }
	}

	public final Constants_sectionContext constants_section() throws RecognitionException {
		Constants_sectionContext _localctx = new Constants_sectionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constants_section);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(CONST);
			setState(168);
			const_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Const_listContext extends ParserRuleContext {
		public List<Const_nameContext> const_name() {
			return getRuleContexts(Const_nameContext.class);
		}
		public Const_nameContext const_name(int i) {
			return getRuleContext(Const_nameContext.class,i);
		}
		public List<TerminalNode> EQUAL() { return getTokens(ExprParser.EQUAL); }
		public TerminalNode EQUAL(int i) {
			return getToken(ExprParser.EQUAL, i);
		}
		public List<ConstantContext> constant() {
			return getRuleContexts(ConstantContext.class);
		}
		public ConstantContext constant(int i) {
			return getRuleContext(ConstantContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(ExprParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(ExprParser.SEMICOLON, i);
		}
		public Const_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_const_list; }
	}

	public final Const_listContext const_list() throws RecognitionException {
		Const_listContext _localctx = new Const_listContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_const_list);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			const_name();
			setState(171);
			match(EQUAL);
			setState(172);
			constant();
			setState(180);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(173);
					match(SEMICOLON);
					setState(174);
					const_name();
					setState(175);
					match(EQUAL);
					setState(176);
					constant();
					}
					} 
				}
				setState(182);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Const_nameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ExprParser.IDENTIFIER, 0); }
		public Const_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_const_name; }
	}

	public final Const_nameContext const_name() throws RecognitionException {
		Const_nameContext _localctx = new Const_nameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_const_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ExprParser.IDENTIFIER, 0); }
		public SignContext sign() {
			return getRuleContext(SignContext.class,0);
		}
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public Char_constantContext char_constant() {
			return getRuleContext(Char_constantContext.class,0);
		}
		public String_constantContext string_constant() {
			return getRuleContext(String_constantContext.class,0);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_constant);
		int _la;
		try {
			setState(192);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PLUSOP || _la==MINUSOP) {
					{
					setState(185);
					sign();
					}
				}

				{
				setState(188);
				match(IDENTIFIER);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(189);
				number();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(190);
				char_constant();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(191);
				string_constant();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_sectionContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(ExprParser.VAR, 0); }
		public Var_declarationContext var_declaration() {
			return getRuleContext(Var_declarationContext.class,0);
		}
		public Variable_sectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_section; }
	}

	public final Variable_sectionContext variable_section() throws RecognitionException {
		Variable_sectionContext _localctx = new Variable_sectionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_variable_section);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			match(VAR);
			setState(195);
			var_declaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declarationContext extends ParserRuleContext {
		public List<Var_listContext> var_list() {
			return getRuleContexts(Var_listContext.class);
		}
		public Var_listContext var_list(int i) {
			return getRuleContext(Var_listContext.class,i);
		}
		public List<TerminalNode> COLON() { return getTokens(ExprParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(ExprParser.COLON, i);
		}
		public List<Data_typeContext> data_type() {
			return getRuleContexts(Data_typeContext.class);
		}
		public Data_typeContext data_type(int i) {
			return getRuleContext(Data_typeContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(ExprParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(ExprParser.SEMICOLON, i);
		}
		public Var_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_declaration; }
	}

	public final Var_declarationContext var_declaration() throws RecognitionException {
		Var_declarationContext _localctx = new Var_declarationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_var_declaration);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			var_list();
			setState(198);
			match(COLON);
			setState(199);
			data_type();
			setState(207);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(200);
					match(SEMICOLON);
					setState(201);
					var_list();
					setState(202);
					match(COLON);
					setState(203);
					data_type();
					}
					} 
				}
				setState(209);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_listContext extends ParserRuleContext {
		public List<Var_nameContext> var_name() {
			return getRuleContexts(Var_nameContext.class);
		}
		public Var_nameContext var_name(int i) {
			return getRuleContext(Var_nameContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ExprParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ExprParser.COMMA, i);
		}
		public Var_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_list; }
	}

	public final Var_listContext var_list() throws RecognitionException {
		Var_listContext _localctx = new Var_listContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_var_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(210);
